Configuration for Production Deployment

--- a/Project-1/package.json
+++ b/Project-1/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "watch": "vite build --watch --mode development",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "serve": "serve -s build/app"
   },
   "dependencies": {
     "react": "^18.2.0",
